fix(Home): change style in button to align left

--- a/src/app/components/screen/screen.component.scss
+++ b/src/app/components/screen/screen.component.scss
@@ -94,6 +94,7 @@
             text-align: start;
             font-weight: 500;
             color: #707070;
+            display: flex;
             mat-icon{
               margin-right: 8px;
               color:mat-color($primary);
